[package]
name = "os"
version = "0.1.0"
authors = ["Dirinkbottle"]
edition = "2021"

[features]
default = ["main_fs"]
main_fs = ["ext4"]
ext4 = ["rsext4"]

[dependencies]
log = "0.4"
bitflags = "2.0.2"
buddy_system_allocator = "0.6"
lazy_static = { version="1.4.0", features = ["spin_no_std"] }
riscv = { path = "./dependencies/riscv", features = ["inline-asm"]}
xmas-elf = "0.7.0"
spin = "0.9"
virtio-drivers = { path = "./dependencies/virtio-drivers" }
rsext4 = {path = "./dependencies/rsext4", optional = true}


[build-dependencies]
cc = "1.0"

[profile.release]
debug = true
panic = "abort"

[profile.dev]
panic = "abort"